--- a/hw1/index.html
+++ b/hw1/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Hello world</h1>   
+ <h1>Hello world</h1> 
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, ipsa pariatur! Vitae ab earum molestiae a et? Quo, atque quisquam, illo ullam excepturi eaque tempore exercitationem quas inventore praesentium voluptatum?</p>  
 </body>
 </html>
