--- a/hw1/index.html
+++ b/hw1/index.html
@@ -9,5 +9,13 @@
 <body>
  <h1>Hello world</h1> 
  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, ipsa pariatur! Vitae ab earum molestiae a et? Quo, atque quisquam, illo ullam excepturi eaque tempore exercitationem quas inventore praesentium voluptatum?</p>  
+
+ <ul>
+    <li>fdwg</li>
+    <li>sdfgdf</li>
+    <li>ghnb</li>
+    <li>vc</li>
+    <li>dgfbgbdf</li>
+ </ul>
 </body>
 </html>
